Service API client side
